# bukichi-bot

./: .env.example  .gitignore  pyproject.toml  run.sh
bukichi_bot/: bukichi_bot.py  cli.py
bukichi_bot/components/: fest_image_creator.py  image_creator.py  inactive_members_detector.py  log_repository.py  salmon_run_stage_image_creator.py  splatoon3_api_client.py  stage_image_creator.py
tests/components/: test_salmon_run_stage_image_creator.py
tests/json/: salmon_run_stage_info.json
